# flask_template

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml  setup.cfg
.github/: dependabot.yml
.github/workflows/: ci.yml
tests/: test_app.py
