[tool.poetry]
name = "flask-template"
version = "0.1.0"
description = "Flask template project with preconfigured tools"
authors = ["Kevin Rodriguez <kyrodriguez97@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.13.1"
flask = "3.1.2"

[tool.poetry.group.test.dependencies]
coverage = "7.10.6"
pytest = "8.4.2"

[tool.poetry.group.dev.dependencies]
flake8 = "7.3.0"
autoflake = "2.3.1"
mypy = "1.18.2"
isort = "6.0.1"
black = "25.1.0"
pydantic = "2.11.9"
pre-commit = "4.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
