[project]
name = "flask-template"
version = "0.2.0"
description = "Flask template project with preconfigured tools"
authors = [{ name = "Kevin Rodriguez", email = "kyrodriguez97@gmail.com" }]
requires-python = ">=3.13.1"
readme = "README.md"
dependencies = [
    "flask==3.1.2",
]

[dependency-groups]
test = [
    "coverage==7.11.1",
    "pytest==9.0.1",
]
dev = [
    "flake8==7.3.0",
    "autoflake==2.3.1",
    "mypy==1.18.2",
    "isort==7.0.0",
    "black==25.9.0",
    "pre-commit==4.4.0",
]

[tool.uv]
package = false
default-groups = [
    "test",
    "dev",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
