[project]
name = "flask-template"
version = "0.2.0"
description = "Flask template project with preconfigured tools"
authors = [{ name = "Kevin Rodriguez", email = "kyrodriguez97@gmail.com" }]
requires-python = ">=3.13.1"
readme = "README.md"
dependencies = [
    "flask==3.1.2",
]

[dependency-groups]
test = [
    "coverage==7.13.2",
    "pytest==9.0.2",
]
dev = [
    "pre-commit==4.5.1",
    "ruff==0.14.14",
]

[tool.uv]
package = false
default-groups = [
    "test",
    "dev",
]

# Ruff configuration
[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
select = [
    "E", # pycodestyle
    "F", # Pyflakes
    "UP", # pyupgrade
    "B", # flake8-bugbear
    "SIM", # flake8-simplify
    "I", # isort
]
ignore = ["E203", "E305"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
